Fri Feb 23 7:44:14 2001  Andrew Lanoix  <alanoix@umich.edu>

	*src/server.c added #include<memory.h>

	*src/sha.c Don't #include<unistd.h> on Windows

	*src/tcp gnet_tcp_socket_new_async on Windows, needed to add
	    G_IO_ERR to g_io_add_watch() call.

	*README.win32 Clarify mingw/gcc/cygwin problem.

Sat Feb 17 16:17:49 2001  David Helder  <dhelder@umich.edu>

	* tests/Makefile.am: Now compile tests by default

	* src/*: Added/removed const's
	
	* src/md5.c (gnet_md5_copy_string): Added
	* src/{md5,sha}.c: Added gnet_{sha,md5}_{new_incremental, update,
	    final} for "incremental" hashes
	
Wed Feb 14 20:57:07 2001  David Helder  <dhelder@umich.edu>

	* src/pack.c: Implemented pack_strdup.  Removed calcsize - not
	   useful.

	* src/inetaddr.c (gnet_gethostbyaddr): Fix locking.  We did not
	   hold the lock when we accessed the hostent struct.  This only
	   affects software that uses threads on systems without
	   gethostby{name,addr}_r

	* tests/: Moved some examples here 

	* doc/: Rebuilt, cleaned up

Tue Jan 23 13:11:03 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Fixed --enable-debug macro
	* doc/gnet.sgml: Fixed --libs problem
	* README: Added gpoker
	
	* src/iochannel.c (gnet_io_channel_writen): Fixed comment.

Thu Dec 14 14:02:50 2000  Andrew Lanoix  <alanoix@umich.edu>

	* Updates to the Win32 GIOChannel socket fix
	* g_io_channel_win32_new_stream_socket() renamed to
		gnet_io_channel_win32_new_stream_socket() 
	* gnet_tcp_socket_new_async() Win32 version now uses the
		GIOChannel fix, also callback on an error was broken

Mon Nov 13 19:49:32 2000  David Helder  <dhelder@umich.edu>

	* examples/echoclient-udp.c: Added
	* examples/echoserver-udp.c: "

Wed Nov  8 10:45:46 2000  David Helder  <dhelder@umich.edu>

	* README: Added gPoker
	
Thu Nov  2 19:26:47 2000  Andrew Lanoix  <alanoix@umich.edu>

	* src/tcp.c: gnet_tcp_socket_new_async_cancel() Win32 version
            did not cleanup properly
	* src/gnet-private.c: Removed debug code