@@ -106,3 +106,7 @@ Quest/Epos
 gPoker
   network poker game
   http://gpoker.sourceforge.net
+
+PreViking
+  telephony middleware
+  http://www.bellworldwide.net/previking/
